--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
 					strFileName = "a.vbs"
 				}
 				
-                bat("${strFileName} + ${strPath}")
+                bat("${strPath} + ${strFileName}")
             }
         }
 		
@@ -25,7 +25,7 @@ pipeline {
 					strFileName = "b.vbs"
 				}
 				
-                bat("${strFileName} + ${strPath}")
+                bat("${strPath} + ${strFileName}")
 			}
 		}
 		
@@ -36,7 +36,7 @@ pipeline {
 					strFileName = "c.vbs"
 				}
 				
-                bat("${strFileName} + ${strPath}")
+                bat("${strPath} + ${strFileName}")
 			}
 		}
 		
@@ -47,7 +47,7 @@ pipeline {
 					strFileName = "d.vbs"
 				}
 				
-                bat("${strFileName} + ${strPath}")
+                bat("${strPath} + ${strFileName}")
 			}
 		}
     }
